[tool.poetry]
name = "neural-style-transfer"
version = "0.1.0"
description = ""
authors = ["Paul Champion <paul.champion@artelys.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "^8.1.3"
tensorflow = "^2.9.1"
Pillow = "^9.1.1"
image = "^1.5.33"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
